Document Green Chonk for end users
The placeholder guide does not explain how to install or operate the
finished application.

Add a full command reference, validation and storage guidance, plus
troubleshooting and credits. Include a screenshot of the complete JavaFX
interface and link the project overview to the published guide.